tests/samples/passing/17_trait_bounds.mlang
trait Numeric {
    fn zero | |->Self;
}

impl Numeric for i32 {
    fn zero | |->Self 0;
}

fn main | |->() {
    let start Numeric::zero();
    ()
};
