tests/samples/failing/09_missing_trait_impl.mlang
trait Numeric {
    fn zero | |->Self;
}

fn require_numeric<T: Numeric> |value: T|->T value;

fn main | |->() {
    let text "hello";
    require_numeric text;
};
